--- a/Profile App/ProfileProject/templates/base.html
+++ b/Profile App/ProfileProject/templates/base.html
@@ -1,22 +1,20 @@
 
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Connecting to CSS file -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'base.css' %}">
-
     <title>Profile App</title>
+    
+    <!-- Connecting to CSS file -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 </head>
 <body>
     <div class="container">
         <div class="welcomeMessage">
-            <h1>Welcome To</h1>
-            <h2>Our Application</h2>
+            <h1>Welcome</h1>
             <h3>For Your</h3>
             <h2>Profile Setup</h2>
         </div>
