--- a/Profile App/ProfileProject/static/css/base.css
+++ b/Profile App/ProfileProject/static/css/base.css
@@ -28,3 +28,26 @@ body{
     padding-left: 60px;
 }
 
+.linksSide > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+button{
+    background-color: rgb(43, 129, 43);
+    color: white;
+    padding: 10px;
+    width: 80px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+button:hover{
+    position: relative;
+    top: 5px;
+}
