--- a/Profile App/ProfileProject/static/css/base.css
+++ b/Profile App/ProfileProject/static/css/base.css
@@ -49,5 +49,17 @@ button{
 
 button:hover{
     position: relative;
-    top: 5px;
+    top: 3px;
+    box-shadow: 2px 2px 1px rgb(8, 14, 3);
+}
+
+a{
+    text-decoration-line: none;
+    color: white;
+    transition: none;
+}
+
+a:hover{
+    font-weight: bold;
+    text-shadow: 1px 1px 2px white;
 }
