Application for setting up your profile

--- a/Profile App/ProfileProject/templates/base.html
+++ b/Profile App/ProfileProject/templates/base.html
@@ -28,8 +28,7 @@
             <div class="logSide">
                 <h3>Already have an Account?</h3>
                 <button type="button">
-                    <!--<a href="http://">Log In</a> -->
-                    Log In
+                    <a href="{% url 'login' %}">Log In</a>
                 </button>
             </div>
         </div>
