--- a/Profile App/ProfileProject/templates/login.html
+++ b/Profile App/ProfileProject/templates/login.html
@@ -11,32 +11,24 @@
     <!-- CSS file -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 
-    {% for message in messages %}
-        <script>
-            alert(`${message}`)
-        </script>
-    {% endfor %}
-
 </head>
 <body>
+    {% for message in messages %}
+        <h5>{{message}}</h5>
+    {% endfor %}
     <div class="container">
         <h2>Log In</h2>
         <form method="POST">
             {% csrf_token %}
             <div class="top">
                 <div>
-                    <label>First Name</label>
-                    {{form.First_Name}}
-                </div>
-                <br><br>
-                <div>
-                    <label>Email</label>
-                    {{form.Email}}
+                    <label>Username</label>
+                    {{form.username}}
                 </div>
                 <br><br>
                 <div>
                     <label>Password</label>
-                    {{form.Password}}
+                    {{form.password}}
                 </div>
                 <br><br>
             </div>
