--- a/Profile App/ProfileProject/templates/home.html
+++ b/Profile App/ProfileProject/templates/home.html
@@ -1,43 +1,62 @@
 
 
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Importing Bootstrap5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- CSS file -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
 
-    <title>Home Page</title>
+    <!-- Importing CloudFlare Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZb02noKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <title>Home</title>
 </head>
 <body>
-    <div class="container-fluid" style="display: flex; flex-direction: column;">
-        <div class="topSide"></div>
-        <div class="bottomSide" style="display: flex;">
-            <div class="leftSide">
-                <ul class="nav nav-tabs flex-column" role="tablist">
-                    <li class="nav-item">
-                        <a href="#home" class="nav-link active" data-bs-toggle="tab">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#ProfileSetup" class="nav-link" data-bs-toggle="tab">Setup Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#ViewProfile" class="nav-link" data-bs-toggle="tab">View Profile</a>
-                    </li>
-                </ul>
+
+    <div class="container">
+        <nav>
+            <div class="header">
+                <button class="toggleBtn">
+                    <!-- Bars icon that will be used when checking responsiveness of screen i.e using screens of different sizes -->
+                    <i class="fas fa-bars"></i>
+                </button>
             </div>
-            <div class="rightSide">
-                <div class="tab-content">
-                    <div class="container tab-pane fade" id="home">
-                        <br>
-                        <h4>Home</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+            <!-- Navigation Links -->
+            <ul class="links">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="{% url 'logout' %}">Log Out</a>
+                </li>
+            </ul>
+        </nav>
     </div>
+
+    <div class="content">
+
+        <!-- Tab Links -->
+        <div class="tab">
+            <button class="tablinks" onclick="openTab(event, 'Tab1')" id="defaultTab">Welcome Tab</button>
+            <button class="tablinks" onclick="openTab(event, 'Tab2')">Add Profiles</button>
+            <button class="tablinks" onclick="openTab(event, 'Tab3')">View Profiles</button>
+        </div>
+
+        <!-- Tab Content -->
+        <div class="tabcontent" id="Tab1">
+            <h3>{{welcoming_mess}}</h3>
+            <p>This is an app for storing different profiles.</p>
+        </div>
+        <div class="tabcontent" id="Tab2"></div>
+        <div class="tabcontent" id="Tab3"></div>
+    </div>
+
+    <!-- JavaScript -->
+    <script></script>
 </body>
 </html>
