--- a/Profile App/ProfileProject/static/css/home.css
+++ b/Profile App/ProfileProject/static/css/home.css
@@ -1,3 +1,147 @@
 
 
 
+*, *::before, *::after{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: rgba(0, 4, 255, 0.233);
+    color: black;
+    font-size: 1.5rem;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(10, 112, 52);
+}
+
+.header{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+@media screen and (min-width: 500px) {
+    .toggleBtn{
+        display: none;
+    }
+}
+
+.toggleBtn:hover{
+    color: #e74c3c;
+    transform: rotate(90deg); /* Rotates the icon 90 degrees clockwise */
+}
+
+.links{
+    list-style-type: none;
+    margin: 0 30px 0 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+.links a{
+    display: block;
+    color: rgb(255, 250, 250);
+    text-decoration: none;
+    margin: 10px 20px;
+    text-transform: capitalize;
+    transition: all 0.3s linear;
+}
+
+.links a:hover{
+    padding: 0;
+    color: #b7c536;
+    background: transparent;
+    transform: scale(1.2);
+}
+
+@media screen and (max-width: 500px) {
+    
+    body{
+        font-size: 1rem;
+    }
+
+    nav{
+        flex-direction: column;
+        justify-content: flex-start;
+        margin: 0;
+    }
+
+    .toggleBtn{
+        color: #ecf0f1;
+        font-size: 1.5rem;
+        margin: 10px;
+        background: transparent;
+        border-color: transparent;
+        transition: all 0.3s linear;
+        cursor: pointer;
+    }
+
+    .toggleBtn:hover{
+        color: #e74c3c;
+        transform: rotate(90deg);
+    }
+
+    .links{
+        flex-direction: column;
+        height: 0;
+    }
+
+    .links a:hover{
+        padding-left: 50px;
+    }
+
+    .active{
+        height: 10rem;
+    }
+
+}
+
+
+.tab{
+    float: left;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 15%;
+    height: 300px;
+}
+
+.tab button{
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 20px 15px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: center;
+    cursor: pointer;
+    font-size: 15px;
+    transition: 0.3s;
+}
+
+.tab button:hover{
+    background-color: #ddd;
+}
+
+.tab button.active{
+    background-color: #ccc;
+}
+
+.tabcontent{
+    float: left;
+    padding: 5px 15px;
+    border: 1px solid #ccc;
+    width: 85%;
+    border-left: none;
+    overflow: none;
+}
